klass-model-converters/klass-compiler/src/test/resources/cool/klass/model/converter/compiler/error/audit/AuditRelationshipWithoutUserIdErrorTest.klass
package com.errors

class DummyClass systemTemporal versioned audited
{
    id: Long id key;
}

user User systemTemporal versioned
{
    userId: String id key userId;
    otherProperty: Long;
}

association CreatedBy
{
    dummyClassesCreatedBy: DummyClass[0..*];
    createdBy: User[1..1] createdBy;

    relationship this.createdById == User.otherProperty
}

association LastUpdatedBy
{
    dummyClassesLastUpdatedBy: DummyClass[0..*];
    lastUpdatedBy: User[1..1] lastUpdatedBy;

    relationship this.lastUpdatedById == User.otherProperty
}
